--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "fresh-start": "npm run reset && npx react-native run-android"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-picker/picker": "^2.11.0",
     "@react-native-vector-icons/common": "^12.0.0",
     "@react-native-vector-icons/feather": "^12.0.0",
     "@react-native-vector-icons/fontawesome6": "^12.0.0",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
+    "axios": "^1.9.0",
     "expo": "^53.0.9",
     "react": "19.0.0",
     "react-native": "^0.79.2",
