--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native-stack": "^7.3.13",
     "axios": "^1.9.0",
     "expo": "^53.0.9",
+    "expo-image-picker": "~16.1.4",
     "react": "19.0.0",
     "react-dom": "^19.0.0",
     "react-native": "^0.79.2",
